--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "back_end",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon app.js",
-    "watch": "nodemon --ext *"
+   "scripts": {
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
